--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -18,7 +18,7 @@
   --primary-color: rgba(80, 70, 199, 1);
   --primary-color-txt: rgba(80, 70, 199, 0.7);
   --primary-color-light: rgba(80, 70, 199, 0.2);
-  --primary-color-hover: rgba(80, 70, 199, 0.75);
+  --primary-color-hover: rgba(80, 70, 199, 0.5);
   --primary-color-active: rgb(43, 29, 196);
 
   --border-color: rgb(12, 12, 12);
