--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -10,13 +10,24 @@ main {
   }
 
   .hero {
-    gap: 8rem;
+    --height: 100vh;
+    --height: 100dvh;
+
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: center;
+    height: var(--height);
+    margin: 0;
+    padding: 0;
+    max-height: var(--height);
+
+    .hero-text {
+      gap: 8rem;
+      height: 100%;
+      padding: 1rem;
+      display: flex;
+      flex-flow: column nowrap;
+      align-items: center;
+      justify-content: center;
+    }
 
     * {
       color: rgb(255, 255, 255);
@@ -29,7 +40,7 @@ main {
       margin-inline: auto;
 
       .notice {
-        max-width: 30rem;
+        max-width: 35rem;
         color: var(--text-color-light);
         font-weight: 400;
         font-size: 0.85rem;
@@ -40,7 +51,7 @@ main {
     hgroup {
       height: max-content;
       text-align: center;
-      margin-bottom: 5rem;
+      margin-bottom: 4rem;
 
       h1 {
         font-size: 3rem;
@@ -55,10 +66,12 @@ main {
     }
 
     @media screen and (min-width: 760px) {
-      gap: 9rem;
+      .hero-text {
+        gap: 9rem;
+      }
 
       hgroup {
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
 
         h1 {
           font-size: 3.5rem;
@@ -96,16 +109,17 @@ main {
 
   .youtube {
     ul {
-      width: 100%;
+      max-width: 100%;
       list-style: none;
+      margin-bottom: 2rem;
 
       gap: 3rem;
-      display: flex;
-      align-items: center;
-      flex-flow: column nowrap;
-      justify-content: center;
+      display: grid;
+      justify-items: center;
+      grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 
       li {
+        height: 20rem;
         max-width: 100%;
         min-width: 100%;
 
@@ -117,6 +131,7 @@ main {
 
         iframe {
           max-width: 100%;
+          max-height: 100%;
           display: block;
           min-width: 100%;
           border-radius: 10px;
@@ -140,13 +155,9 @@ main {
 
     @media screen and (min-width: 760px) {
       ul {
-        gap: 1.5rem;
-        flex-flow: row nowrap;
-        align-items: flex-start;
-
         li {
           max-width: 25rem;
-          min-width: 25rem;
+          min-width: 20rem;
         }
       }
     }
